style.css
/*2save*/
.mobileToggle {
  display: none;
}

html {
  margin:0;
}
body {
  font-family: Arial;
  margin:0;
}
nav ul {
  padding-left:20px;
}
ul li{
  width: 100%;
}
  a {
  text-decoration:none;
  color:black;
  font-size: 2rem;
}

a:hover {
  color:gold;
  text-shadow: 2px 1px 4px rgba(150, 150, 150, 1);

}

ul {
  list-style:none;
}

#cat {
  text-decoration: underline;
  font-size: 1em;
  color:blue;
}
.tenPixels{
  margin-bottom: 10px;
}
.menuTitle {
  border: 3px solid orange;
  font-family:'Architects Daughter', cursive;
  font-size: 2em;
}
.textLeft {
  text-align: left;
  padding-left: 10px;
  padding-right: 10px;
}
nav {
  background-color:white;
  min-height:100vh;
  float:left;
  position:fixed;
box-shadow: 4px 0px 0px gold;
}

p, h1, h2 {
  margin-top:0;
}

nav p {
  text-align:center;
}

.clearfix {
  clear:both;
}

body {
    background: url(http://i.imgur.com/ixpzLnm.jpg) no-repeat fixed center right;
    width: 100%;
    min-height: 100vh;
}

#logo {
  height:100%;
  width:100%;
}

header {
  min-height: 100vh;
}

h1 {
  background-color:gold;
  color:white;
  margin: 0 auto;
  width: 85%;
  text-align:center;
  margin-top: 10%;
  padding-top:10px;
  padding-bottom:15px;
  font-size: 2.5rem;
  font-family:'Architects Daughter', cursive;
  text-shadow: 1px 3px 2px rgba(255, 150, 150, 1);
  max-width: 700px;
}

h2 {
  background-color:white;
  color: black;
  max-width: 80%;
  text-align: center;
  width:500px;
  margin: 0 auto;
  margin-top:-13px;
  padding: 5px;
  font-family: "Quando";
  box-shadow: 3px 4px 0px rgba(255, 150, 0, 1);
}

main {
  margin-left: 331px;
}
.locations {
  background-color: white;
  text-align: center;
  width: 600px;
  margin: 0 auto;
  margin-top:30px;
  padding-top:3px;
  padding-bottom: 30px;
  box-shadow: -3px -4px 0px gold;
  opacity: 0.8;
  max-width: 85%;
}

h3 {
  font-family: "Quando";
  font-size: 1.5rem;
}

address, strong {
  font-size: 1.5rem;
}

footer {
  background-color: gold;
  opacity: 0.8;
  color: black;
  margin-bottom: 0;
  padding-top: 5px;
  padding-bottom: 5px;
}
footer p {
  text-align: center;
  margin-bottom: 0;
}
/*NAVIGATION RESPONSIVE*/
@media (max-width: 800px), (max-height: 600px) {
  * {
    max-width: 100%;
  }
  .mobileToggle {
    display: block;
  }

body{
  background: none;
}
  nav {
    min-height: 0;
   float: none;
    width: 100vw;
    position: static;
  }
  #logo{
    height: 200px;
    width: 200px;
    margin-top: 20px;
  }
  header {
    background-color: white;
    min-height: 0;
  }
  ul a li, li{
    width: auto;
  }
  a {
    font-size: 1.4rem;
  }
  h1 {
    margin-top:15px;
  }
  main {
    margin:0;
  }

  p {
    margin-top: -18px;
  }

  address, strong {
    font-size: 1.2rem;
  }

  footer {
    padding-top: 20px;
  }

/*End of media thing*/}

